force-app/main/default/objects/Standard_Customer_Pay_Plan_Detail__c/fields/Service_Tax_Amount_Advance_Recd__c.field-meta.xml
<CustomField>
    <fullName>Service_Tax_Amount_Advance_Recd__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Any advance recd on service tax for this milestone</description>
    <label>Service Tax Amount (Advance Recd)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>