force-app/main/default/objects/Standard_Customer_Pay_Plan_Detail__c/fields/Service_Tax_Amount_Billed__c.field-meta.xml
<CustomField>
    <fullName>Service_Tax_Amount_Billed__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Amount of service tax for which invoice has been raised</description>
    <label>Service Tax Amount (Demanded)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>