force-app/main/default/objects/Standard_Customer_Pay_Plan_Detail__c/fields/Service_Tax_Amount_Due__c.field-meta.xml
<CustomField>
    <fullName>Service_Tax_Amount_Due__c</fullName>
    <formula>Service_Tax_Amount_Billed__c -  Service_Tax_Amount_Paid__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Tax Amount (Balance)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>