force-app/main/default/objects/Standard_Customer_Pay_Plan_Detail__c/fields/Service_Tax_Amount_Paid__c.field-meta.xml
<CustomField>
    <fullName>Service_Tax_Amount_Paid__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Amount paid against service tax for this milestone</description>
    <label>Service Tax Amount (Paid)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>