force-app/main/default/objects/Standard_Customer_Pay_Plan_Detail__c/fields/Service_Tax_Amount_Q__c.field-meta.xml
<CustomField>
    <fullName>Service_Tax_Amount_Q__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Service Tax Amount (On Quote)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>