force-app/main/default/objects/Standard_Customer_Pay_Plan_Detail__c/fields/ST_On_Floor_Rise__c.field-meta.xml
<CustomField>
    <fullName>ST_On_Floor_Rise__c</fullName>
    <label>ST On Floor Rise</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>