force-app/main/default/objects/Standard_Customer_Pay_Plan_Detail__c/fields/ST_On_Infrastructure_Charges__c.field-meta.xml
<CustomField>
    <fullName>ST_On_Infrastructure_Charges__c</fullName>
    <label>ST On Infrastructure Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>