force-app/main/default/objects/Standard_Customer_Pay_Plan_Detail__c/fields/ST_on_Premium_1__c.field-meta.xml
<CustomField>
    <fullName>ST_on_Premium_1__c</fullName>
    <label>ST on Premium 1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>