force-app/main/default/objects/Standard_Customer_Pay_Plan_Detail__c/fields/StageIID__c.field-meta.xml
<CustomField>
    <fullName>StageIID__c</fullName>
    <defaultValue>0</defaultValue>
    <label>StageIID</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>