force-app/main/default/objects/Standard_Customer_Pay_Plan_Detail__c/fields/Tax_Amount_2__c.field-meta.xml
<CustomField>
    <fullName>Tax_Amount_2__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Tax Amount 2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>