force-app/main/default/objects/Standard_Customer_Pay_Plan_Detail__c/fields/Tax_Name_1__c.field-meta.xml
<CustomField>
    <fullName>Tax_Name_1__c</fullName>
    <label>Tax Name 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>