force-app/main/default/objects/Standard_Customer_Pay_Plan_Detail__c/fields/TDS__c.field-meta.xml
<CustomField>
    <fullName>TDS__c</fullName>
    <label>TDS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>