force-app/main/default/objects/Standard_Customer_Pay_Plan_Detail__c/fields/Total_Charge_Value_Minus__c.field-meta.xml
<CustomField>
    <fullName>Total_Charge_Value_Minus__c</fullName>
    <label>Total Charge Value Minus</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>