force-app/main/default/objects/Standard_Customer_Pay_Plan_Detail__c/fields/Total_Flat_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Flat_Cost__c</fullName>
    <formula>Basic__c +  Development_Charges__c +  Floor_Rise__c +  Infrastructure_Charges__c +  Premium_1__c +  Premium_2__c +  Premium_3__c + Premium_4__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Flat Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>