force-app/main/default/objects/Standard_Customer_Pay_Plan_Detail__c/fields/Total_ST__c.field-meta.xml
<CustomField>
    <fullName>Total_ST__c</fullName>
    <formula>ST_On_Basic__c +  ST_On_Development_Charges__c +  ST_On_Floor_Rise__c +   ST_On_Infrastructure_Charges__c +  ST_on_Premium_1__c +  ST_on_Premium_2__c +  ST_on_Premium_3__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total ST</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>