force-app/main/default/objects/Standard_Customer_Pay_Plan_Detail__c/fields/Tower__c.field-meta.xml
<CustomField>
    <fullName>Tower__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tower</label>
    <referenceTo>Tower__c</referenceTo>
    <relationshipLabel>Standard Customer Pay Plan Details</relationshipLabel>
    <relationshipName>Standard_Customer_Pay_Plan_Details</relationshipName>
    <type>Lookup</type>
</CustomField>