force-app/main/default/objects/Standard_Customer_Pay_Plan_Detail__c/fields/Unique_ConstructionStage__c.field-meta.xml
<CustomField>
    <fullName>Unique_ConstructionStage__c</fullName>
    <label>Unique ConstructionStage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>