force-app/main/default/objects/Standard_Customer_Pay_Plan_Detail__c/validationRules/After_Selected_PercentageAmount_Value.validationRule-meta.xml
<ValidationRule>
    <fullName>After_Selected_PercentageAmount_Value</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL( Amount__c ,&apos;Percentage&apos;) , Amount_Value__c  &gt; 100)</errorConditionFormula>
    <errorDisplayField>Amount__c</errorDisplayField>
    <errorMessage>After Selecting Percentage Picklist Value of %Amount  ,You cannot  enter %/Amount Value greater than 100.</errorMessage>
</ValidationRule>