force-app/main/default/objects/Standard_Customer_Pay_Plan_Detail__c/validationRules/After_Selecting_On_date.validationRule-meta.xml
<ValidationRule>
    <fullName>After_Selecting_On_date</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL( Is_to_be_Paid__c , &apos;On Date&apos;) , ISBLANK(  On_date__c  ) )</errorConditionFormula>
    <errorDisplayField>On_date__c</errorDisplayField>
    <errorMessage>After Selecting On Date Pick Value of Is to be Paid Pick List,On Date cann&apos;t be blank.</errorMessage>
</ValidationRule>