force-app/main/default/objects/Standard_Customer_Pay_Plan_Detail__c/validationRules/Enter_Days_Months_Value.validationRule-meta.xml
<ValidationRule>
    <fullName>Enter_Days_Months_Value</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL( Days_Months__c , &apos;&apos;) , NOT( ISBLANK( Days_Months_Value__c ) ) )</errorConditionFormula>
    <errorDisplayField>Days_Months__c</errorDisplayField>
    <errorMessage>Please Select atleast Days or Months Picklist Value</errorMessage>
</ValidationRule>