force-app/main/default/objects/Standard_Customer_Pay_Plan_Detail__c/validationRules/Entering_value_in_Amount_Value_and_Calcu.validationRule-meta.xml
<ValidationRule>
    <fullName>Entering_value_in_Amount_Value_and_Calcu</fullName>
    <active>false</active>
    <errorConditionFormula>AND(AND( NOT( ISBLANK( Amount_Value__c ) ),Amount_Value__c!=0.00) ,OR(NOT( ISBLANK(  Calculate_Installment_Amount_as__c  ) ),
NOT(ISBLANK( Total_Charge_Value_Minus__c))))</errorConditionFormula>
    <errorMessage>After Entering in %Amount Value,You cannot insert in Calculate Installment Amount as(%) and in Total Charge Value Minus or After Entering in Calculate Installment Amount as(%) and in Total Charge Value Minus,You cannot enter in %Amount Value</errorMessage>
</ValidationRule>