force-app/main/default/objects/Standard_Customer_Pay_Plan_Detail__c/validationRules/If_Is_to_be_paid_From_Date_of_Booking.validationRule-meta.xml
<ValidationRule>
    <fullName>If_Is_to_be_paid_From_Date_of_Booking</fullName>
    <active>false</active>
    <errorConditionFormula>AND( Customer_Pay_Plan_Header__c == null, ISPICKVAL( Is_to_be_Paid__c , &apos;From Dt. of Booking&apos;),  Days_Months_Value__c ==0, ISPICKVAL( Amount__c , &apos;Percentage&apos;)  )</errorConditionFormula>
    <errorMessage>You Cannot set Percentage in %Amount  if  From Date of Booking is selected  in Is to be paid &amp;  Day/Month  value is 0 and customer pay plan header is null.</errorMessage>
</ValidationRule>