force-app/main/default/objects/Standard_Customer_Pay_Plan_Detail__c/validationRules/Is_To_Be_Paid_PickList_Validation_DayVa.validationRule-meta.xml
<ValidationRule>
    <fullName>Is_To_Be_Paid_PickList_Validation_DayVa</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL( Is_to_be_Paid__c , &apos;From Dt. of Booking&apos;) , ISBLANK( Days_Months_Value__c ) )</errorConditionFormula>
    <errorDisplayField>Days_Months_Value__c</errorDisplayField>
    <errorMessage>After Selecting  Dt. of Booking Picklist Value of Is to be Paid Day/Months Value cannot be left blank.</errorMessage>
</ValidationRule>