force-app/main/default/objects/Standard_Customer_Pay_Plan_Detail__c/validationRules/Is_To_Be_Paid_PickList_Validation_DayVal.validationRule-meta.xml
<ValidationRule>
    <fullName>Is_To_Be_Paid_PickList_Validation_DayVal</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL( Is_to_be_Paid__c , &apos;Construction Stage&apos;) ,  ISBLANK( Days_Months_Value__c ) )</errorConditionFormula>
    <errorDisplayField>Days_Months_Value__c</errorDisplayField>
    <errorMessage>After Selecting Construction Stage Picklist  Value,Day/Months Value Cannot be left  blank.</errorMessage>
</ValidationRule>