force-app/main/default/objects/Standard_Customer_Pay_Plan_Detail__c/validationRules/Is_To_Be_Paid_PickList_Validation_Ondate.validationRule-meta.xml
<ValidationRule>
    <fullName>Is_To_Be_Paid_PickList_Validation_Ondate</fullName>
    <active>true</active>
    <description>When User Select Construction Stage of PickList and Enter data in On date.</description>
    <errorConditionFormula>AND( ISPICKVAL( Is_to_be_Paid__c , &apos;Construction Stage&apos;) , NOT( ISBLANK( On_date__c ) ) )</errorConditionFormula>
    <errorDisplayField>On_date__c</errorDisplayField>
    <errorMessage>After Selecting Construction Stage Pick Value,You cannn&apos;t enter in On date.</errorMessage>
</ValidationRule>