force-app/main/default/objects/Standard_Customer_Pay_Plan_Detail__c/validationRules/Is_To_Be_Paid_PickList_Validation_Projec.validationRule-meta.xml
<ValidationRule>
    <fullName>Is_To_Be_Paid_PickList_Validation_Projec</fullName>
    <active>true</active>
    <description>When User Select Construction Stage of PickList and Enter data in Project Construction Stages.</description>
    <errorConditionFormula>AND( ISPICKVAL( Is_to_be_Paid__c , &apos;Construction Stage&apos;) , ISBLANK( Project_Construction_Stages__c ))</errorConditionFormula>
    <errorDisplayField>Project_Construction_Stages__c</errorDisplayField>
    <errorMessage>After Selecting Construction Stage Picklist Value,Project Construction Stages Cannot be left blank.</errorMessage>
</ValidationRule>