force-app/main/default/objects/Standard_Customer_Pay_Plan_Detail__c/validationRules/Is_To_Be_Paid_PickList_ValidationDay.validationRule-meta.xml
<ValidationRule>
    <fullName>Is_To_Be_Paid_PickList_ValidationDay</fullName>
    <active>true</active>
    <description>When User Select On Date of PickList and Enter data in Days/Months</description>
    <errorConditionFormula>AND(
ISPICKVAL( Is_to_be_Paid__c , &apos;On Date&apos;), ISPICKVAL( Days_Months__c , &apos;Day(s)&apos;)  )</errorConditionFormula>
    <errorDisplayField>Days_Months__c</errorDisplayField>
    <errorMessage>After Selecting On Date Pick Value,You cannn&apos;t enter in Days/Months</errorMessage>
</ValidationRule>