force-app/main/default/objects/Standard_Customer_Pay_Plan_Detail__c/validationRules/Select_Percent_Amount_Entering_in_Calcul.validationRule-meta.xml
<ValidationRule>
    <fullName>Select_Percent_Amount_Entering_in_Calcul</fullName>
    <active>false</active>
    <errorConditionFormula>AND( ISPICKVAL( Amount__c , &apos;Percentage&apos;) ,  NOT( ISBLANK( Calculate_Installment_Amount_as__c ) )  )</errorConditionFormula>
    <errorDisplayField>Calculate_Installment_Amount_as__c</errorDisplayField>
    <errorMessage>After Selecting Percentage Picklist value of %/Amount ,You cannot enter in Calculate Installment Amount as(%)</errorMessage>
</ValidationRule>