force-app/main/default/objects/Standard_Customer_Pay_Plan_Detail__c/validationRules/Select_Percent_Amount_Entering_in_Minus.validationRule-meta.xml
<ValidationRule>
    <fullName>Select_Percent_Amount_Entering_in_Minus</fullName>
    <active>false</active>
    <errorConditionFormula>AND( ISPICKVAL( Amount__c , &apos;Percentage&apos;) , NOT( ISBLANK(  Total_Charge_Value_Minus__c  ) ) )</errorConditionFormula>
    <errorDisplayField>Total_Charge_Value_Minus__c</errorDisplayField>
    <errorMessage>After Selecting Percentage Picklist value of %/Amount ,You cannot enter in Total Charge Value Minus field</errorMessage>
</ValidationRule>